serialize object and append it to an attribute

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "browserify": "^13.1.0",
     "tape": "^4.6.0",
     "tape-run": "^2.1.4"
+  },
+  "dependencies": {
+    "stylon": "0.0.1"
   }
 }
